app/assets/stylesheets/workflows.scss
#cy {
  height: 600px;
  width: 100%;
}

.workflow-toolbar-wrapper {
  background-color: #DDDDDD;
  padding: 5px;
  border-radius: 4px;
}

#workflow-toolbar {
  text-align: right;
  margin-bottom: 5px;
}

#workflow-status-bar {
  line-height: 34px;
  //margin-bottom: 10px;
  padding: 5px 10px;
  background: #efefef;
  border-radius: 4px;
}

#workflow-status-message {
  margin-left: 10px;
  font-style: italic;
}

/* Hide the border from the predefined colour selector */
.simplecolorpicker span.color:hover, .simplecolorpicker span.color[data-selected],
.simplecolorpicker span.color[data-selected]:hover {
  border-color: transparent !important;
}

.workflows-container {
  padding: 0px 10px 10px 10px;
}

.workflow-diagram-wrapper {
  border: 1px solid #ccc;
  padding: 10px;
  margin-bottom: 10px;
  border-radius: 4px;
}

.workflow-diagram-container {
  border: 1px solid #ccc;
  display: flex;

  @media (max-width: $screen-md-min) {
    flex-direction: column-reverse;
  }
}

#workflow-diagram-sidebar {
  flex-shrink: 0;
  width: 300px;
  border-left: 1px solid #ccc;
  @media (min-width: $screen-lg-min) {
    width: 450px;
  }

  @media (max-width: $screen-md-min) {
    border-left: none;
    border-bottom: 1px solid #ccc;
    margin-bottom: 20px;
    width: 100%;
  }
}

#workflow-diagram-content {
  flex-grow: 1;
}

#workflow-diagram-sidebar-desc {
  padding: 10px;
}

.split {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;

  overflow-y: auto;
  overflow-x: hidden;
}

.split.split-horizontal, .gutter.gutter-horizontal {
  height: 100%;
  float: left;
}

.gutter {
  background-color: #eee;

  background-repeat: no-repeat;
  background-position: 50%;
}

.gutter.gutter-horizontal {
  background-image: url('grips/vertical.png');
  cursor: ew-resize;
}

.gutter.gutter-vertical {
  background-image: url('grips/horizontal.png');
  cursor: ns-resize;
}

